headless: create incognito profiles with Target.createBrowserContext

This patch starts creating off-the-record browser contexts in response
to the Target.createBrowserContext() command.

This should make no difference to the users, but has a few benefits for
us:
- alignes with the non-headless design of Target.createBrowserContext()
  method.
- avoids issues with cookie persistance (see BUG)
- saves some CPU cycles since we don't hit SQLite any more

BUG=836075
R=dgozman

Change-Id: I1d33c37e72bc9a2745eda0efae9947f94386417b
Reviewed-on: https://chromium-review.googlesource.com/1025402
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553657}
Former-commit-id: 632461086458b92777294df3874d7c28fe20d68a